--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news-scraper",
   "version": "1.0.0",
   "description": "This is a coding bootcamp assignment to create a web app that lets users view and leave comments on the latest news. I did not write any of the articles; instead, I used Mongoose and Cheerio to scrape news from another site.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
